// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post card should render post with featured image 1`] = `
<Container
  className="post"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <link
      href="some-post-link"
      rel="canonical"
    />
  </HelmetWrapper>
  <Link
    replace={false}
    to="/"
  >
    <Icon
      as="i"
      circular={true}
      name="chevron left"
    />
  </Link>
  <div
    className="post-image"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <Container
    textAlign="justified"
  >
    <Header>
      <h1
        dangerouslySetInnerHTML={
          Object {
            "__html": "Mock title",
          }
        }
      />
    </Header>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/1"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/2"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/3"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <HeaderSubheader>
       
      by
       
      <b />
      , 
      <t
        ago={false}
        calendar={false}
        element="time"
        filter={[Function]}
        format="MMMM DD, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      >
        someMockDate
      </t>
    </HeaderSubheader>
    <div
      className="post-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some content that should be rendered",
        }
      }
    />
  </Container>
  <Modal
    basic={true}
    className="share"
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer={true}
    onClick={[Function]}
    open={false}
    trigger={
      <TransitionGroup
        animation="fade up"
        className="transition-container"
        duration="500"
      >
        <Icon
          as="i"
          circular={true}
          name="share alternate"
          onClick={[Function]}
          size="large"
        />
      </TransitionGroup>
    }
  >
    <ModalActions>
      <Link
        replace={false}
        to="/post/mock-slug/1/comments/undefined"
      >
        <Icon
          as="i"
          circular={true}
          color="grey"
          inverted={true}
          name="comment"
          size="large"
        />
      </Link>
      <Social media test
        link="some-post-link"
        title="Mock title"
      />
    </ModalActions>
  </Modal>
</Container>
`;

exports[`Post card should render post with image placeholder 1`] = `
<Container
  className="post"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <link
      href="some-post-link"
      rel="canonical"
    />
  </HelmetWrapper>
  <Link
    replace={false}
    to="/"
  >
    <Icon
      as="i"
      circular={true}
      name="chevron left"
    />
  </Link>
  <Container
    textAlign="justified"
  >
    <Header>
      <h1
        dangerouslySetInnerHTML={
          Object {
            "__html": "Mock title",
          }
        }
      />
    </Header>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/1"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/2"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <Link
      key="Some category"
      replace={false}
      to="/category/undefined/3"
    >
      <Label>
        Some category
      </Label>
    </Link>
    <HeaderSubheader>
       
      by
       
      <b />
      , 
      <t
        ago={false}
        calendar={false}
        element="time"
        filter={[Function]}
        format="MMMM DD, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      >
        someMockDate
      </t>
    </HeaderSubheader>
    <div
      className="post-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Some content that should be rendered",
        }
      }
    />
  </Container>
  <Modal
    basic={true}
    className="share"
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer={true}
    onClick={[Function]}
    open={false}
    trigger={
      <TransitionGroup
        animation="fade up"
        className="transition-container"
        duration="500"
      >
        <Icon
          as="i"
          circular={true}
          name="share alternate"
          onClick={[Function]}
          size="large"
        />
      </TransitionGroup>
    }
  >
    <ModalActions>
      <Link
        replace={false}
        to="/post/mock-slug/1/comments/undefined"
      >
        <Icon
          as="i"
          circular={true}
          color="grey"
          inverted={true}
          name="comment"
          size="large"
        />
      </Link>
      <Social media test
        link="some-post-link"
        title="Mock title"
      />
    </ModalActions>
  </Modal>
</Container>
`;
